# Running-LLM-Models-Locally-For-Free-With-Ollama

./: .env  ChatBot.py  README.md  agent.py  pyproject.toml  test.py
Finetuning Project/: README.md  finetuning_gemma3.py  pyproject.toml
Multi Agent Researcher Google ADK Project/: .env.example  README.md  __init__.py  agent.py  pyproject.toml
Notion AI Agent Project/: .env  Project_Structure.txt
RAG Project/: README.md  pyproject.toml
Running LLM Models Locally with Ollama/: package.py  pyproject.toml  requirements.txt
